# steam-tasting

./: .env.example  .gitignore  DEVELOPMENT.md  README.md  game_tasting_template.md  index.html  legacy-standalone.html  package.json  pnpm-lock.yaml  pyproject.toml  steam_export.py  tsconfig.node.json  vite.config.ts
.github/workflows/: deploy.yml
deploy/: README.md  nginx.conf  steam-tasting.service
server/: README.md  config.py  db.py  index.js  main.py  prompt.py  session.js  steam.js  steam.py
src/: Admin.tsx  App.tsx  README.md  Share.tsx  main.tsx  styles.css  types.ts
src/components/: PoemPanel.tsx  Results.tsx  StepData.tsx  StepInfo.tsx  StepLLM.tsx  Steps.tsx
src/hooks/: useLocalStorage.ts
src/lib/: api.ts  exporter.ts  llm.ts  parse.ts  prompt.ts
src/styles/: base.css  data.css  panels.css  report.css  wizard.css
