[project]
name = "steam-tasting-backend"
version = "0.1.0"
description = "Steam OpenID login + Steam Web API proxy for Steam Tasting"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "itsdangerous>=2.2",
    "sqlmodel>=0.0.22",
]

[tool.uv]
package = false
